--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ba0c384-8dae-41a8-a814-b9fb10febecb",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a24919d5-dc9a-4755-bc51-062e647e13a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data after dropping rows with NA target values, (489, 45) matrix.\n",
+      "Unique patient IDs in the data: 171\n",
+      "Loaded data from data/processed/vitals_yeo-johnson_test_data.csv\n",
+      "Index(['PTID', 'EXAMDATE', 'DX_bl', 'AGE', 'PTGENDER', 'PTEDUCAT', 'PTETHCAT',\n",
+      "       'PTRACCAT', 'PTMARRY', 'APOE4', 'PIB', 'ABETA', 'TAU', 'Hippocampus',\n",
+      "       'EXAMDATE_bl', 'ADAS11_bl', 'ADAS13_bl', 'MMSE_bl', 'Ventricles_bl',\n",
+      "       'Hippocampus_bl', 'MOCA_bl', 'ABETA_bl', 'TAU_bl', 'PIB_bl', 'Years_bl',\n",
+      "       'Month_bl', 'VSWEIGHT', 'VSWTUNIT', 'VSBPSYS', 'VSBPDIA', 'VSPULSE',\n",
+      "       'VSRESP', 'VSTEMP', 'VSTMPSRC', 'VSTMPUNT'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from tabpfn_extensions import TabPFNRegressor, TabPFNClassifier\n",
@@ -55,6 +72,466 @@
     "vecs = []\n",
     "print(x.columns)\n",
     "t = targets[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b2c792e5-d816-4d7c-8e22-2396da0f2128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PTID               object\n",
+       "EXAMDATE          float64\n",
+       "DX_bl              object\n",
+       "AGE               float64\n",
+       "PTGENDER           object\n",
+       "PTEDUCAT          float64\n",
+       "PTETHCAT           object\n",
+       "PTRACCAT           object\n",
+       "PTMARRY            object\n",
+       "APOE4             float64\n",
+       "PIB               float64\n",
+       "ABETA             float64\n",
+       "TAU               float64\n",
+       "Hippocampus       float64\n",
+       "EXAMDATE_bl       float64\n",
+       "ADAS11_bl         float64\n",
+       "ADAS13_bl         float64\n",
+       "MMSE_bl           float64\n",
+       "Ventricles_bl     float64\n",
+       "Hippocampus_bl    float64\n",
+       "MOCA_bl           float64\n",
+       "ABETA_bl          float64\n",
+       "TAU_bl            float64\n",
+       "PIB_bl            float64\n",
+       "Years_bl          float64\n",
+       "Month_bl          float64\n",
+       "VSWEIGHT          float64\n",
+       "VSWTUNIT          float64\n",
+       "VSBPSYS           float64\n",
+       "VSBPDIA           float64\n",
+       "VSPULSE           float64\n",
+       "VSRESP            float64\n",
+       "VSTEMP            float64\n",
+       "VSTMPSRC          float64\n",
+       "VSTMPUNT          float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dfc44d3a-3149-40f7-bf69-6945087cd45a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10      15141.0\n",
+       "12      15475.0\n",
+       "14      15839.0\n",
+       "16      16191.0\n",
+       "17      16588.0\n",
+       "         ...   \n",
+       "1642    18498.0\n",
+       "1643    18898.0\n",
+       "1644    19269.0\n",
+       "1645    17318.0\n",
+       "1647    19052.0\n",
+       "Name: EXAMDATE, Length: 489, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[\"EXAMDATE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ba873c3c-a919-4336-8db8-9bc6a7398180",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PTID</th>\n",
+       "      <th>EXAMDATE</th>\n",
+       "      <th>DX_bl</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PTGENDER</th>\n",
+       "      <th>PTEDUCAT</th>\n",
+       "      <th>PTETHCAT</th>\n",
+       "      <th>PTRACCAT</th>\n",
+       "      <th>PTMARRY</th>\n",
+       "      <th>APOE4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Month_bl</th>\n",
+       "      <th>VSWEIGHT</th>\n",
+       "      <th>VSWTUNIT</th>\n",
+       "      <th>VSBPSYS</th>\n",
+       "      <th>VSBPDIA</th>\n",
+       "      <th>VSPULSE</th>\n",
+       "      <th>VSRESP</th>\n",
+       "      <th>VSTEMP</th>\n",
+       "      <th>VSTMPSRC</th>\n",
+       "      <th>VSTMPUNT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>002_S_0413</td>\n",
+       "      <td>15141.0</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>61.1475</td>\n",
+       "      <td>57.606184</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>36.888889</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>002_S_0413</td>\n",
+       "      <td>15475.0</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>72.0984</td>\n",
+       "      <td>58.513368</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>36.555556</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>002_S_0413</td>\n",
+       "      <td>15839.0</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>84.0328</td>\n",
+       "      <td>58.059776</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>36.777778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>002_S_0413</td>\n",
+       "      <td>16191.0</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>95.5738</td>\n",
+       "      <td>58.966960</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>36.333333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>002_S_0413</td>\n",
+       "      <td>16588.0</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>108.5900</td>\n",
+       "      <td>58.966960</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>36.833333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1642</th>\n",
+       "      <td>941_S_4187</td>\n",
+       "      <td>18498.0</td>\n",
+       "      <td>LMCI</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>107.7700</td>\n",
+       "      <td>86.182480</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>36.222222</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1643</th>\n",
+       "      <td>941_S_4187</td>\n",
+       "      <td>18898.0</td>\n",
+       "      <td>LMCI</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>120.8850</td>\n",
+       "      <td>85.275296</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1644</th>\n",
+       "      <td>941_S_4187</td>\n",
+       "      <td>19269.0</td>\n",
+       "      <td>LMCI</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>133.0490</td>\n",
+       "      <td>84.368112</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>36.400000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1645</th>\n",
+       "      <td>941_S_6017</td>\n",
+       "      <td>17318.0</td>\n",
+       "      <td>LMCI</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>77.110640</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>36.833333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1647</th>\n",
+       "      <td>941_S_7041</td>\n",
+       "      <td>19052.0</td>\n",
+       "      <td>EMCI</td>\n",
+       "      <td>73.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Widowed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>49.441528</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>36.611111</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>489 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            PTID  EXAMDATE DX_bl   AGE PTGENDER  PTEDUCAT         PTETHCAT  \\\n",
+       "10    002_S_0413   15141.0    CN  76.3   Female      16.0  Not Hisp/Latino   \n",
+       "12    002_S_0413   15475.0    CN  76.3   Female      16.0  Not Hisp/Latino   \n",
+       "14    002_S_0413   15839.0    CN  76.3   Female      16.0  Not Hisp/Latino   \n",
+       "16    002_S_0413   16191.0    CN  76.3   Female      16.0  Not Hisp/Latino   \n",
+       "17    002_S_0413   16588.0    CN  76.3   Female      16.0  Not Hisp/Latino   \n",
+       "...          ...       ...   ...   ...      ...       ...              ...   \n",
+       "1642  941_S_4187   18498.0  LMCI  62.0     Male      16.0  Not Hisp/Latino   \n",
+       "1643  941_S_4187   18898.0  LMCI  62.0     Male      16.0  Not Hisp/Latino   \n",
+       "1644  941_S_4187   19269.0  LMCI  62.0     Male      16.0  Not Hisp/Latino   \n",
+       "1645  941_S_6017   17318.0  LMCI  76.6     Male      17.0  Not Hisp/Latino   \n",
+       "1647  941_S_7041   19052.0  EMCI  73.3   Female      20.0  Not Hisp/Latino   \n",
+       "\n",
+       "     PTRACCAT  PTMARRY  APOE4  ...  Month_bl   VSWEIGHT  VSWTUNIT  VSBPSYS  \\\n",
+       "10      White  Married    0.0  ...   61.1475  57.606184       1.0    120.0   \n",
+       "12      White  Married    0.0  ...   72.0984  58.513368       1.0    131.0   \n",
+       "14      White  Married    0.0  ...   84.0328  58.059776       1.0    125.0   \n",
+       "16      White  Married    0.0  ...   95.5738  58.966960       1.0    115.0   \n",
+       "17      White  Married    0.0  ...  108.5900  58.966960       1.0    110.0   \n",
+       "...       ...      ...    ...  ...       ...        ...       ...      ...   \n",
+       "1642    White  Married    0.0  ...  107.7700  86.182480       1.0    148.0   \n",
+       "1643    White  Married    0.0  ...  120.8850  85.275296       1.0    153.0   \n",
+       "1644    White  Married    0.0  ...  133.0490  84.368112       1.0    155.0   \n",
+       "1645    White  Married    1.0  ...    0.0000  77.110640       1.0    160.0   \n",
+       "1647    White  Widowed    NaN  ...    0.0000  49.441528       1.0    144.0   \n",
+       "\n",
+       "      VSBPDIA  VSPULSE  VSRESP     VSTEMP  VSTMPSRC  VSTMPUNT  \n",
+       "10       62.0     69.0    18.0  36.888889       1.0       1.0  \n",
+       "12       64.0     71.0    15.0  36.555556       1.0       1.0  \n",
+       "14       69.0     75.0    15.0  36.777778       1.0       1.0  \n",
+       "16       67.0     82.0    15.0  36.333333       1.0       1.0  \n",
+       "17       62.0     77.0    16.0  36.833333       1.0       1.0  \n",
+       "...       ...      ...     ...        ...       ...       ...  \n",
+       "1642     71.0     70.0    18.0  36.222222       3.0       1.0  \n",
+       "1643     74.0     69.0    16.0  36.000000       3.0       1.0  \n",
+       "1644     78.0     66.0    18.0  36.400000       3.0       2.0  \n",
+       "1645     70.0     51.0    20.0  36.833333       1.0       1.0  \n",
+       "1647     77.0     94.0    18.0  36.611111       3.0       1.0  \n",
+       "\n",
+       "[489 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
