--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -21,12 +21,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13ba11b-645b-4ae7-b07f-94a9ed284633",
+   "id": "9d12553b-9dbd-4d49-840b-4a4006293c64",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import typing\n",
     "import torch\n",
-    "from typing import Iterator"
+    "from typing import Iterator\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import os\n",
+    "import random\n",
+    "\n",
+    "from tabpfn_extensions import TabPFNRegressor, TabPFNClassifier\n",
+    "from tabpfn_extensions.embedding import TabPFNEmbedding\n",
+    "from tabpfn.constants import (\n",
+    "    NA_PLACEHOLDER,\n",
+    ")\n",
+    "\n",
+    "# import to figure out what is going on with the data\n",
+    "from tabpfn.utils import validate_X_predict, _fix_dtypes, _process_text_na_dataframe\n",
+    "\n",
+    "from tabpfn.config import ModelInterfaceConfig\n",
+    "from tabpfn.preprocessing import EnsembleConfig\n",
+    "\n",
+    "from src.data_constants import *\n",
+    "from src.data_utils import load_data_for_tabPFN\n"
    ]
   },
   {
@@ -36,47 +58,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from tabpfn_extensions import TabPFNRegressor, TabPFNClassifier\n",
-    "from tabpfn_extensions.embedding import TabPFNEmbedding\n",
-    "\n",
-    "import argparse\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import random\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from src.data_utils import load_data_for_tabPFN\n",
-    "from src.data_constants import targets\n",
-    "\n",
     "# Set the random seed for reproducibility\n",
     "s = 42\n",
     "np.random.seed(s)\n",
     "random.seed(s)\n",
     "\n",
     "# load the dataset\n",
-    "f = 'data/processed/vitals_yeo-johnson_test_data.csv'\n",
+    "f = 'data/processed/vitals_train_data.csv'\n",
     "if f.endswith(\".csv\"):\n",
     "    data, ids = load_data_for_tabPFN(f)\n",
-    "    print(f\"Loaded data from {f}\")\n",
-    "\n",
-    "# fit the model and extract the embeddings\n",
-    "y = data[targets]\n",
-    "x = data.drop(columns=targets)\n",
-    "vecs = []\n",
-    "print(x.columns)\n",
-    "t = targets[-1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70673465-bf7a-4b9e-a092-0c700dd8e74b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tabpfn.config import ModelInterfaceConfig\n",
-    "from tabpfn.preprocessing import EnsembleConfig"
+    "    print(f\"Loaded data from {f}\")"
    ]
   },
   {
@@ -88,8 +79,29 @@
    "source": [
     "config = ModelInterfaceConfig(\n",
     "    FEATURE_SHIFT_METHOD = None,\n",
-    "    CLASS_SHIFT_METHOD = None\n",
+    "    CLASS_SHIFT_METHOD = None,\n",
+    "    FINGERPRINT_FEATURE = False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "890ef85e-67cd-4d98-a5d4-ea399e92efef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_features_ = [data.columns.get_loc(col) for col in categorical_features if col in data.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c537b38e-d6f3-4faa-82fa-8054a3f5a947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_features_"
    ]
   },
   {
@@ -99,44 +111,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = TabPFNClassifier(random_state=s,  \n",
-    "                      categorical_features_indices=[0,2,4,6,7,8],\n",
+    "reg = TabPFNRegressor(random_state=s,  \n",
+    "                      categorical_features_indices=categorical_features_,\n",
     "                      inference_config=config,\n",
     "                      n_estimators = 1\n",
-    "                     )\n",
-    "reg.feature_names_in_= x.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f02268ca-c0a5-4e96-b82b-17b3f675552d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tabpfn.utils import validate_X_predict, _fix_dtypes, _process_text_na_dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9395b7d-883e-48ca-bd15-106ffb4f284b",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "x.dtypes"
+    "                     )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f3beb211-f0f3-46e6-a900-b4521c3a28f9",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "reg.fit(data, np.arange(data.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e23734-8ab5-4a78-b482-933212d054ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.fit(x, y[t])"
+    "x = data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0054b37-6b94-45df-ad85-7aaf3567dc54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.dtypes"
    ]
   },
   {
@@ -146,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = validate_X_predict(x, reg)"
+    "X = validate_X_predict(x, reg)"
    ]
   },
   {
@@ -156,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = _fix_dtypes(x, cat_indices=reg.categorical_features_indices)"
+    "X = _fix_dtypes(X, cat_indices=reg.categorical_features_indices)"
    ]
   },
   {
@@ -166,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = _process_text_na_dataframe(x, ord_encoder=reg.preprocessor_)"
+    "X = _process_text_na_dataframe(X, ord_encoder=reg.preprocessor_)"
    ]
   },
   {
@@ -182,90 +193,177 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d29306f-8e6c-4a6a-afd5-78c3026cc7cb",
+   "id": "d455541f-c39b-4c26-9991-faeb2b0fea33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.base import check_is_fitted, is_classifier\n",
-    "print(check_is_fitted(reg))"
+    "print(x.columns[x.isna().all(axis=0)].values[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59cfcf45-d0d9-4d16-b5c5-eab230912a8f",
+   "id": "c84f20e2-1d93-4da5-b41f-2202f913846c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_iter_outputs(\n",
-    "        executor,\n",
-    "        X: np.ndarray,\n",
-    "        *,\n",
-    "        device: torch.device,\n",
-    "        autocast: bool,\n",
-    "        only_return_standard_out: bool = True,\n",
-    "    ) -> Iterator[tuple[torch.Tensor | dict, EnsembleConfig]]:\n",
-    "        for preprocessor, X_train, y_train, config, cat_ix in zip(\n",
-    "            executor.preprocessors,\n",
-    "            executor.X_trains,\n",
-    "            executor.y_trains,\n",
-    "            executor.ensemble_configs,\n",
-    "            executor.cat_ixs,\n",
-    "        ):\n",
-    "            X_test = preprocessor.transform(X).X\n",
-    "            X_test = torch.as_tensor(X_test, dtype=torch.float32, device=device)\n",
-    "            # X_test = X_test.unsqueeze(1)\n",
-    "\n",
-    "            yield X_test, config"
+    "reg.executor_.ensemble_configs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05859915-e9d0-414f-b8ed-96f25a311099",
+   "id": "6ef65a9e-14ca-47d2-a2c6-b8f7367ef389",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for output, config in custom_iter_outputs(\n",
-    "            reg.executor_,\n",
-    "            X,\n",
-    "            device=reg.device_,\n",
-    "            autocast=reg.use_autocast_,\n",
-    "        ):\n",
-    "    print(output, config)\n",
-    "    print(output.shape)"
+    "pipeline = reg.executor_.preprocessors[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c32c099-7e18-4d00-8965-767e0627e42a",
+   "id": "e1fb6373-227e-47db-b1e0-6e9604f2cb4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x)"
+    "pipeline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38c2610d-72a5-4ad0-b454-078163a8b5ef",
+   "id": "69a07882-45cf-4fe1-ab96-0fc84a3a8606",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(pd.DataFrame(output))"
+    "pipeline[1].get_column_types(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c932039b-c3ac-4b67-9707-f1e077aba211",
+   "id": "c2dcb07b-18aa-424b-af07-2a1e67818603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline[1].get_adaptive_preprocessors()[\"adaptive\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d5dd86-2a0c-40ee-8f4f-426c0b365788",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline[1].get_all_preprocessors(100)[\"safepower\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d351a6-bd0c-4e94-a2af-722a86bdbf52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline[1].subsample_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b54474f1-0198-4e75-a023-a5cef46f2560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline[1].apply_to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5464217a-5da3-4206-a8d0-f47ba1ae65fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0401ea9f-5521-4190-a462-c5c9bdd0a46a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline[2].categorical_transformer_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "840a76e8-bfc9-484d-9c35-9efa02a8ee28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dad0301e-6de2-4c6d-ba49-d8b885c6b2f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e8b858-3dd4-4cfd-9fb1-3df162775775",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d12ebf3c-e2a9-4e90-bbb2-43a7ee095956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspecting = X.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b2d047-afe2-4732-ae78-c5b242579f22",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "tran = reg.executor_.preprocessor.transform(X)"
+    "pd.DataFrame(pipeline[0].transform(inspecting).X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "322e8a6f-d690-4d49-8899-d12f7f8acc8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(pipeline[1].transform(inspecting).X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef832fd9-93b6-4936-beb9-6e5343f04787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(pipeline[2].transform(inspecting).X)"
    ]
   },
   {
@@ -283,25 +381,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c84f20e2-1d93-4da5-b41f-2202f913846c",
+   "id": "5d9526c9-fe18-494c-8f20-a24237404be4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13a3ddba-17fc-4aa2-8d0f-9716f96712a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.executor_.ensemble_configs"
+    "print(dir(pipeline[3]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2091d071-2eb1-4117-9bc2-0dca18bf3d15",
+   "id": "29370d30-1236-415e-b51f-daa945b6b01e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name, transformer, columns in reg.preprocessor_.transformers_:\n",
-    "    print(f\"Transformer: {name}\")\n",
-    "    print(f\"Applies to columns: {columns}\")\n",
-    "    print(f\"Transformer steps: {transformer}\")\n",
-    "    print(\"-\" * 40)"
+    "print(pipeline[3].shuffle_method)"
    ]
   },
   {
@@ -377,9 +479,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ad_traj]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ad_traj-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
